Udemy-Certification/force-app/main/default/objects/PQR__c/PQR__c.object-meta.xml
<CustomObject>
    <label>PQR</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>PQR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PQRs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>