Udemy-Certification/force-app/main/default/objects/PQR__c/fields/CustomerPQR__c.field-meta.xml
<CustomField>
    <fullName>CustomerPQR__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PQRs</relationshipLabel>
    <relationshipName>PQRs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>