Udemy-Certification/force-app/main/default/objects/PQR__c/fields/Observations__c.field-meta.xml
<CustomField>
    <fullName>Observations__c</fullName>
    <label>Observations</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>